--- a/RuntimePermissions/app/src/main/res/values/strings.xml
+++ b/RuntimePermissions/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="contact_name">Contact Name :</string>
+    <string name="contact_number">Contact Number :</string>
 </resources>
